# Minecraft-Mcp-server

./: .env  .gitignore  README.md  convert_player.py  pyproject.toml  server.py  tasklist.md
data/: player.json
data/players/1800199933--1673247621--2022281632--1759345026/: inventory.json  player.meta.json  stats.json
data/recipes/: all_recipes.json
players/1800199933--1673247621--2022281632--1759345026/: attributes.json  position.json  scoreboard.json
src/minecraft-mcp-server/: config.py  mcp_server.py  server.py
src/minecraft_mcp_server/: main.py  mcp_client.py  mcp_server.py  read_dat.py  server.py
src/tests/: test_simple_fastapi.py
