[project]
name = "minecraft-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.0",
    "fastmcp>=2.13.0.2",
    "mcp[cli]>=1.20.0",
    "nbt>=1.5.1",
    "openai>=2.8.0",
    "pydantic>=2.5.3",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.22.0",
]
